Added lifecycle tests in IssueApiTest.java within a Nested class. Cleaned up duplicated code for lifecycle tests. Added error schema and negative test using it Added Error logging filter to test config